# loop-engineering

./: README.md  __init__.py  __main__.py  pyproject.toml
automation/: __init__.py  heartbeat.py
core/: __init__.py  agent_loop.py  control.py  robustness.py  safety.py  state.py
economics/: __init__.py  router.py
hillclimbing/: __init__.py  trace_analyzer.py
llm/: __init__.py  base.py  mock.py  openai_adapter.py
memory/: __init__.py  working.py
multiagent/: __init__.py  orchestrator.py
observability/: __init__.py  metrics.py  tracing.py
patterns/: __init__.py  catalog.py
reasoning/: __init__.py  reflection.py
state/: __init__.py  scratchpad.py
tests/: test_agent_loop.py  test_control.py  test_part3.py  test_part4.py  test_part5.py  test_state_reasoning.py  test_tools.py
tools/: __init__.py  base.py  builtins.py  structured_feedback.py
verifiers/: __init__.py  base.py  rubric_grader.py
